--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="utf-8">
     <title>ふくろうブログ</title>
     <link rel="stylesheet" href="blog.css">
+    <link href="https://fonts.googleapis.com/css?family=Allura&display=swap" rel="stylesheet">
   </head>
   <body>
   <header class="header">
-    <a href="#" class="header-logo">
+    <a href="https://owl-helmes.github.io/owl/" class="header-logo">
       <img src="117966.jpg">
       </a>
-      <div class="header-title">ふくろうブログ</div>
+    <div class="header-title">Owl BLOG</div>
   </header>
     <div class="main">
       <div class="main-title">BLOG</div>
