--- a/index.html
+++ b/index.html
@@ -1,20 +1,34 @@
-<!DOCTYPE html>
-<html
+  <!DOCTYPE>
+  <html>
   <head>
     <meta charset="utf-8">
     <title>ふくろうブログ</title>
     <link rel="stylesheet" href="blog.css">
     <link href="https://fonts.googleapis.com/css?family=Allura&display=swap" rel="stylesheet">
+    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
   </head>
+
   <body>
-  <header class="header">
-    <a href="https://owl-helmes.github.io/owl/" class="header-logo">
-      <img src="117966.jpg">
+    <header>
+      <a href="https://owl-helmes.github.io/owl/" class="header-logo">
+        <img src="117966.jpg">
       </a>
-    <div class="header-title">Owl BLOG</div>
-  </header>
-    <div class="main">
-      <div class="main-title">BLOG</div>
+    </header>
+
+    <div class="main-title">
+      <h1>Owl BLOG</h1>
     </div>
-  </body>
-</html>
+
+    <div class="main">
+      <div class="top-title">BLOG</div>
+      <div class="blog-main">
+
+      </div>
+    </div>
+    <footer>
+      <a href="https://twitter.com/57sozK8Ir3CwfcO" class="btn twitter">
+        <i class="fab fa-twitter-square"></i></a>
+      </footer>
+    </body>
+
+    </html>
