--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-  <!DOCTYPE>
+    <!DOCTYPE>
   <html>
   <head>
     <meta charset="utf-8">
@@ -16,7 +16,7 @@
     </header>
 
     <div class="main-title">
-      <h1>Owl BLOG</h1>
+      <a href="https://owl-helmes.github.io/owl/" class="big-title"><h1>Owl BLOG</h1></a>
     </div>
 
     <div class="main">
