--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-  <!DOCTYPE>
+  <!DOCTYPE html>
   <html>
   <head>
     <meta charset="utf-8">
@@ -10,9 +10,7 @@
 
   <body>
     <header>
-      <a href="https://owl-helmes.github.io/owl/" class="header-logo">
-        <img src="117966.jpg">
-      </a>
+      <a href="https://owl-helmes.github.io/owl/"><img src="117966.jpg"></a>
     </header>
 
     <div class="main-title">
@@ -32,4 +30,3 @@
     </body>
 
     </html>
-
