--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-    <!DOCTYPE html>
+   <!DOCTYPE html>
   <html>
   <head>
     <meta charset="utf-8">
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="blog.css">
     <link href="https://fonts.googleapis.com/css?family=Allura&display=swap" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="responsive.css">
   </head>
 
   <body>
@@ -20,7 +22,10 @@
     <div class="main">
       <div class="top-title">BLOG</div>
       <div class="blog-main">
+        <div class="contens">
+          <a href="https://owl-helmes.github.io/owl-1/" class="btn content1"><img src="syouzouga.jpg"></a>
 
+        </div>
       </div>
     </div>
     <footer>
